--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.3.6",
     "core-js": "^3.6.5",
     "echarts": "4.8.0",
+    "element-ui": "^2.4.5",
+    "fabric": "^5.3.0",
     "js-cookie": "^3.0.5",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
@@ -19,8 +21,7 @@
     "v-viewer": "^1.6.4",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2",
-    "vuex": "^3.4.0",
-    "element-ui": "^2.4.5"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
