--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "v-viewer": "^1.6.4",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2",
+    "vue-seamless-scroll": "^1.1.23",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
